# datascipsych-project

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
jupyter/: replication.ipynb  report.ipynb
src/project/: task.py
