[project]
name = "project"
version = "0.1.0"
requires-python = ">3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "polars",
    "pyarrow",
    "seaborn",
    "pingouin",
    "jupyterlab",
    "jupyterlab_rise"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
