[project]
name = "project"
version = "0.1.0"
description = "Reanalysis of Osth & Fox (2019)"
readme = "README.md"
authors = [
    { name = "Neal Morton", email = "mortonne@gmail.com" }
]
requires-python = ">3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "polars",
    "pyarrow",
    "seaborn",
    "pingouin",
    "jupyterlab",
    "jupyterlab_rise"
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
